# mono

./: .bazelrc  .bazelversion  .gitignore  BUILD  SCRATCH.md  WORKSPACE  build.gradle.kts  package.json  settings.gradle.kts
.github/workflows/: deploy.yml
buildconfig/cdk/: cdk.bzl
buildconfig/java/: BUILD  jdks.bzl
source/rust/cargo/: BUILD.bazel  Cargo.toml  crates.bzl
source/rust/cargo/remote/: BUILD.autocfg-1.0.1.bazel  BUILD.base64-0.13.0.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.bumpalo-3.8.0.bazel  BUILD.bytes-1.1.0.bazel  BUILD.cc-1.0.72.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.core-foundation-0.9.2.bazel  BUILD.core-foundation-sys-0.8.3.bazel  BUILD.crossterm-0.21.0.bazel  BUILD.crossterm_winapi-0.8.0.bazel  BUILD.either-1.6.1.bazel  BUILD.encoding_rs-0.8.29.bazel  BUILD.fnv-1.0.7.bazel  BUILD.foreign-types-0.3.2.bazel  BUILD.foreign-types-shared-0.1.1.bazel  BUILD.form_urlencoded-1.0.1.bazel  BUILD.futures-channel-0.3.18.bazel  BUILD.futures-core-0.3.18.bazel  BUILD.futures-io-0.3.18.bazel  BUILD.futures-sink-0.3.18.bazel  BUILD.futures-task-0.3.18.bazel  BUILD.futures-util-0.3.18.bazel  BUILD.getrandom-0.2.3.bazel  BUILD.h2-0.3.7.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.http-0.2.5.bazel  BUILD.http-body-0.4.4.bazel  BUILD.httparse-1.5.1.bazel  BUILD.httpdate-1.0.2.bazel  BUILD.hyper-0.14.15.bazel  BUILD.hyper-tls-0.5.0.bazel  BUILD.idna-0.2.3.bazel  BUILD.indexmap-1.7.0.bazel  BUILD.inquire-0.2.1.bazel  BUILD.instant-0.1.12.bazel  BUILD.ipnet-2.3.1.bazel  BUILD.itertools-0.10.1.bazel  BUILD.itoa-0.4.8.bazel  (+82 more)
(+61 files in other folders)
